--- a/ÉttermiSzoftver/ucKimutatasok.xaml
+++ b/ÉttermiSzoftver/ucKimutatasok.xaml
@@ -24,9 +24,8 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <StackPanel Grid.ColumnSpan="2" Grid.Row="0" Orientation="Horizontal">
-                <Label Content="Napi Bevétel" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0" Foreground="#FF2E2409" FontFamily="Mistral" FontSize="20"/>
+                <Label Content="Napi Bevétel"  Margin="75,0,0,0" Foreground="#FF2E2409" FontFamily="Mistral" FontSize="23"/>
             </StackPanel>
-            
             <DatePicker x:Name="tbNpDatum" SelectedDate="{Binding AvailableFrom, Mode=TwoWay}" DisplayDate="{Binding DateTime.Now}"
                     ToolTip="Válasszon dátumot" Width="180" Height="26" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Left"/>
             <Label Content="Dátum:" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="1" Grid.Column="0" Foreground="#FF2E2409" FontFamily="Mistral" FontSize="20"/>
@@ -47,9 +46,9 @@
                 
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <Label Content="Az" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0" Foreground="#FF2E2409" FontFamily="Mistral" FontSize="20"/>
-            <Label Content="utolsó heti bevétel" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="0" Grid.Column="1" Foreground="#FF2E2409" FontFamily="Mistral" FontSize="20"/>
-            
+            <StackPanel Grid.ColumnSpan="2" Grid.Row="0" Orientation="Horizontal">
+                <Label Content="Az utolsó heti bevétel"  Margin="75,0,0,0" Foreground="#FF2E2409" FontFamily="Mistral" FontSize="23"/>
+            </StackPanel>
             <StackPanel Grid.Column="1" Grid.Row="8" Orientation="Horizontal">
                 <TextBlock x:Name="tbHeti" HorizontalAlignment="Left" VerticalAlignment="Center"  Background="#FFE0B02D" Height="20" Width="160" />
                 <Label Content="Ft" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="2" Grid.Column="0" Foreground="#FF2E2409" FontFamily="Mistral" FontSize="16"/>
@@ -67,16 +66,16 @@
                 <RowDefinition/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <Label Content="Havi" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0" Foreground="#FF2E2409" FontFamily="Mistral" FontSize="20"/>
-            <Label Content="Bevétel" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="0" Grid.Column="1" Foreground="#FF2E2409" FontFamily="Mistral" FontSize="20"/>
-            
+            <StackPanel Grid.ColumnSpan="2" Grid.Row="0" Orientation="Horizontal">
+                <Label Content="Havi bevétel"  Margin="75,0,0,0" Foreground="#FF2E2409" FontFamily="Mistral" FontSize="23"/>
+            </StackPanel>
             <Label Content="Dátum:" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="1" Grid.Column="0" Foreground="#FF2E2409" FontFamily="Mistral" FontSize="20"/>
             <StackPanel Grid.Column="1" Grid.Row="8" Orientation="Horizontal">
                 <TextBlock x:Name="tbHavi" HorizontalAlignment="Left" VerticalAlignment="Center"  Background="#FFE0B02D" Height="20" Width="160" />
                 <Label Content="Ft" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="2" Grid.Column="0" Foreground="#FF2E2409" FontFamily="Mistral" FontSize="16"/>
             </StackPanel>
             <Label Content="A havi bevétel:" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="2" Grid.Column="0" Foreground="#FF2E2409" FontFamily="Mistral" FontSize="16"/>
-            <Calendar HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="1" Grid.Row="1" />
+            <Calendar HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="1" Grid.Row="1" Height="30" />
         </Grid>
     </Grid>
 </UserControl>
